[package]
name = "bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.3"
num-bigint = "0.4.4"
bincode = "1.3.3"
serde = { version = "1.0.182", features = ["derive"] }
leveldb = "0.8.6"
db-key = "0.1.0"
byteorder = "1.4.3"
hex = "0.4.3"
rand = {version = "0.8.4", features = ["std"]}
ripemd = "0.1.3"
clap = "2.33.3"
bs58 = "0.4.0"
ring = "0.17.5"
data-encoding = "2.3.3"
